fix(108): Remove root node overflow when menu is open
Add scroll removal code in a useEffect since it implements a side effect

It was necessary to hide the overflow in both body and html tags as an odd behavior was perceived

--- a/src/components/NavigationBar/styles/menu.module.scss
+++ b/src/components/NavigationBar/styles/menu.module.scss
@@ -40,7 +40,7 @@
     @include bar-mixin;
   }
 
-  &:focus::before {
+  &:focus-visible::before {
     @include bar-transitions;
   }
 
